[project]
name = "adk-agent"
version = "0.1.0"
description = "Sample Agent using Google ADK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "freecurrencyapi>=0.1.0",
    "google-adk[eval]>=0.1.0",
    "google-genai>=1.10.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
]
