[project]
name = "adk-agent"
version = "0.1.0"
description = "Sample Agent using Google ADK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anthropic==0.50.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "authlib==1.5.2",
    "backoff==2.2.1",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cryptography==44.0.2",
    "cycler==0.12.1",
    "deprecated==1.2.18",
    "distro==1.9.0",
    "docstring-parser==0.16",
    "everapi==0.1.1",
    "fastapi==0.115.12",
    "filelock==3.18.0",
    "fonttools==4.57.0",
    "freecurrencyapi==0.1.0",
    "frozenlist==1.6.0",
    "fsspec==2025.3.2",
    "google-adk[eval]==0.1.0",
    "google-api-core==2.24.2",
    "google-api-python-client==2.166.0",
    "google-auth==2.38.0",
    "google-auth-httplib2==0.2.0",
    "google-cloud-aiplatform==1.88.0",
    "google-cloud-appengine-logging==1.6.1",
    "google-cloud-audit-log==0.3.2",
    "google-cloud-bigquery==3.31.0",
    "google-cloud-core==2.4.3",
    "google-cloud-logging==3.12.1",
    "google-cloud-monitoring==2.27.1",
    "google-cloud-resource-manager==1.14.2",
    "google-cloud-secret-manager==2.23.2",
    "google-cloud-speech==2.31.1",
    "google-cloud-storage==2.19.0",
    "google-cloud-trace==1.16.1",
    "google-crc32c==1.7.1",
    "google-genai==1.10.0",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.69.2",
    "graphviz==0.20.3",
    "greenlet==3.1.1",
    "grpc-google-iam-v1==0.14.2",
    "grpcio==1.71.0",
    "grpcio-status==1.71.0",
    "h11==0.14.0",
    "httpcore==1.0.8",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "inflection==0.5.1",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "joblib==1.4.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "kiwisolver==1.4.8",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "mcp==1.6.0",
    "monotonic==1.6",
    "multidict==6.4.3",
    "numpy==2.2.4",
    "opentelemetry-api==1.32.0",
    "opentelemetry-exporter-gcp-logging==1.9.0a0",
    "opentelemetry-exporter-gcp-monitoring==1.9.0a0",
    "opentelemetry-exporter-gcp-trace==1.9.0",
    "opentelemetry-exporter-otlp-proto-common==1.32.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.32.0",
    "opentelemetry-exporter-otlp-proto-http==1.32.0",
    "opentelemetry-instrumentation==0.53b0",
    "opentelemetry-instrumentation-alephalpha==0.39.3",
    "opentelemetry-instrumentation-anthropic==0.39.3",
    "opentelemetry-instrumentation-bedrock==0.39.3",
    "opentelemetry-instrumentation-chromadb==0.39.3",
    "opentelemetry-instrumentation-cohere==0.39.3",
    "opentelemetry-instrumentation-crewai==0.39.3",
    "opentelemetry-instrumentation-google-generativeai==0.39.3",
    "opentelemetry-instrumentation-groq==0.39.3",
    "opentelemetry-instrumentation-haystack==0.39.3",
    "opentelemetry-instrumentation-lancedb==0.39.3",
    "opentelemetry-instrumentation-langchain==0.39.3",
    "opentelemetry-instrumentation-llamaindex==0.39.3",
    "opentelemetry-instrumentation-logging==0.53b0",
    "opentelemetry-instrumentation-marqo==0.39.3",
    "opentelemetry-instrumentation-milvus==0.39.3",
    "opentelemetry-instrumentation-mistralai==0.39.3",
    "opentelemetry-instrumentation-ollama==0.39.3",
    "opentelemetry-instrumentation-openai==0.39.3",
    "opentelemetry-instrumentation-pinecone==0.39.3",
    "opentelemetry-instrumentation-qdrant==0.39.3",
    "opentelemetry-instrumentation-replicate==0.39.3",
    "opentelemetry-instrumentation-requests==0.53b0",
    "opentelemetry-instrumentation-sagemaker==0.39.3",
    "opentelemetry-instrumentation-sqlalchemy==0.53b0",
    "opentelemetry-instrumentation-threading==0.53b0",
    "opentelemetry-instrumentation-together==0.39.3",
    "opentelemetry-instrumentation-transformers==0.39.3",
    "opentelemetry-instrumentation-urllib3==0.53b0",
    "opentelemetry-instrumentation-vertexai==0.39.3",
    "opentelemetry-instrumentation-watsonx==0.39.3",
    "opentelemetry-instrumentation-weaviate==0.39.3",
    "opentelemetry-proto==1.32.0",
    "opentelemetry-resourcedetector-gcp==1.9.0a0",
    "opentelemetry-sdk==1.32.0",
    "opentelemetry-semantic-conventions==0.53b0",
    "opentelemetry-semantic-conventions-ai==0.4.3",
    "opentelemetry-util-http==0.53b0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "posthog==3.25.0",
    "propcache==0.3.1",
    "proto-plus==1.26.1",
    "protobuf==5.29.4",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydantic-settings==2.8.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rpds-py==0.24.0",
    "rsa==4.9",
    "ruamel-yaml==0.18.10",
    "ruamel-yaml-clib==0.2.12",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "shapely==2.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.40",
    "sse-starlette==2.2.1",
    "starlette==0.46.1",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "tqdm==4.67.1",
    "traceloop-sdk==0.39.3",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "uritemplate==4.1.1",
    "urllib3==2.4.0",
    "uvicorn==0.34.0",
    "websockets==15.0.1",
    "wrapt==1.17.2",
    "yarl==1.20.0",
    "zipp==3.21.0",
]
